--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    server_name retropixel.cyou;
+    server_name api.retropixel.cyou;
 
-    location /api/ {
+    location / {
         include proxy_params;
         proxy_pass http://127.0.0.1:8000;
     }
