added api endpoint

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,13 +27,13 @@ server {
 
 }
 server {
-    if ($host = retropixel.cyou) {
+    if ($host = api.retropixel.cyou) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
     listen 80;
-    server_name retropixel.cyou;
+    server_name api.retropixel.cyou;
     return 404; # managed by Certbot
 
 
