--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,6 +35,32 @@ server {
     listen 80;
     server_name api.retropixel.cyou;
     return 404; # managed by Certbot
+}
+server {
+    server_name retropixel.cyou;
+
+    location / {
+        root /home/admin/RpServer/app/templates/;
+        index index.html
+    }
+
+    location /static/ {
+        alias /home/admin/RpServer/app/static/;
+    }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/api.retropixel.cyou/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/api.retropixel.cyou/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+}
+server {
+    if ($host = retropixel.cyou) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
 
 
+    listen 80;
+    server_name retropixel.cyou;
+    return 404; # managed by Certbot
 }
