--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,9 +38,9 @@ server {
 }
 server {
     server_name retropixel.cyou;
+    root /home/admin/RpServer/app/templates/;
 
     location / {
-        root /home/admin/RpServer/app/templates/;
         index index.html
     }
 
@@ -49,8 +49,8 @@ server {
     }
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/api.retropixel.cyou/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/api.retropixel.cyou/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/retropixel.cyou/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/retropixel.cyou/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
