--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,7 @@ server {
     root /home/admin/RpServer/app/templates/;
 
     location / {
-        index index.html
+        index index.html;
     }
 
     location /static/ {
