--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,7 +39,7 @@ server {
 server {
     server_name retropixel.cyou;
     root /home/admin/RpServer/app/templates/;
-    index index.html;
+    index login.html;
 
     location /static/ {
         alias /home/admin/RpServer/app/static/;
