--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,7 +39,7 @@ server {
 server {
     server_name retropixel.cyou;
     root /home/admin/RpApp/build/;
-    index login.html;
+    index index.html;
 
     location /static/ {
         alias /home/admin/RpApp/build/static/;
