--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,7 +37,7 @@ server {
     return 404; # managed by Certbot
 }
 server {
-    server_name retropixel.cyou;
+    server_name www.retropixel.cyou retropixel.cyou;
     root /home/admin/RpApp/build/;
     index index.html;
 
