changed app folder

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,11 +38,11 @@ server {
 }
 server {
     server_name www.retropixel.cyou retropixel.cyou;
-    root /home/admin/RpApp/build/;
+    root /home/admin/app/build/;
     index index.html;
 
     location /static/ {
-        alias /home/admin/RpApp/build/static/;
+        alias /home/admin/app/build/static/;
     }
 
     listen 443 ssl; # managed by Certbot
